--- a/src/pages/Register.module.css
+++ b/src/pages/Register.module.css
@@ -52,7 +52,7 @@
 /* Botón del ojo */
 .togglePassword {
   position: absolute;
-  right: 0.7rem;
+  right: 0.5rem;
   top: 50%;
   transform: translateY(-50%);
   background: none;
@@ -72,12 +72,12 @@
   font-size: 1rem;
   border: none;
   border-radius: 6px;
-  background-color: #28a745;
+  background-color: #76e790;
   color: white;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
 
 .form button:hover {
-  background-color: #1e7e34;
+  background-color: #38c659;
 }
