--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -495,6 +495,9 @@
   /* Estilo responsive para pantallas pequeñas */
   @media (max-width: 480px) {
     .campoCheckbox {
+      display: flex;
+      align-items: left;
+      gap: 0.5rem;
       font-size: 1rem;
       flex-wrap: wrap;
       justify-content: flex-start;
